kubernetes/configmap-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: configmap-demo

spec:
  containers:
    - name: busybox
      image: busybox

      command:
        - sh
        - -c
        - env && sleep 3600
