kubernetes/oom-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: oom-demo

spec:
  containers:
    - name: memory-hog
      image: polinux/stress

      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"

        limits:
          memory: "64Mi"
          cpu: "100m"

      command:
        - stress

      args:
        - "--vm"
        - "1"
        - "--vm-bytes"
        - "128M"
        - "--vm-hang"
        - "1"
