kubernetes/pvc-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-demo

spec:
  containers:
    - name: busybox
      image: busybox:1.35

      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: persistent-storage
          mountPath: /data

  volumes:
    - name: persistent-storage

      persistentVolumeClaim:
        claimName: demo-pvc
