kubernetes/resource-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: resource-demo

spec:
  containers:
    - name: nginx
      image: nginx:1.25

      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"

        limits:
          cpu: "200m"
          memory: "128Mi"
