kubernetes/secret-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: secret-demo

spec:
  containers:
    - name: busybox
      image: busybox:latest

      command:
        - sh
        - -c
        - env && sleep 3600
