kubernetes/security-busybox.yaml
apiVersion: v1
kind: Pod

metadata:
  name: security-busybox

spec:
  containers:
    - name: busybox
      image: busybox:1.35

      command:
        - sh
        - -c
        - sleep 3600

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        allowPrivilegeEscalation: false
