kubernetes/security-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: security-demo

spec:
  containers:
    - name: nginx
      image: nginx:1.25

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

        allowPrivilegeEscalation: false
