kubernetes/volume-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-demo

spec:
  containers:
    - name: busybox
      image: busybox:1.35

      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: demo-storage
          mountPath: /data

  volumes:
    - name: demo-storage
      emptyDir: {}
